akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/invalid/ConsumerWithoutConsumeAnnotation.java
package com.example;

import akka.javasdk.annotations.Component;
import akka.javasdk.consumer.Consumer;

@Component(id = "consumer-without-consume")
public class ConsumerWithoutConsumeAnnotation extends Consumer {
  // Missing @Consume annotation - should fail validation

  public Effect onEvent(String event) {
    return effects().done();
  }
}
